--- a/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.scss
+++ b/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.scss
@@ -21,7 +21,16 @@ input#sello {
     padding-right: 5%;
     
 }
+.campoMediano {
+    width: 40%;
+    padding-left: 5%;
+    padding-right: 5%;
+    
+}
 label{
     padding-left: 1%;
     padding-right: 1%;
+}
+input {
+    width: 50px;
 }
