--- a/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
+++ b/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-md-6" align="right">
                     <strong><label for="Fecha">Fecha:</label></strong>
-                    <input class="campoMediano" name="hoy" type="date" [ngModel]="hoy | date:'y-mm-d'" (ngModelChange)="updatehoy($event)">
+                    <input class="campoMediano" name="hoy" type="date" [ngModel]="hoy | date:'y-MM-d'" (ngModelChange)="updatehoy($event)">
                 </div>
             </div>
             <hr>
@@ -46,14 +46,13 @@
                         <td>Incompleto</td>
                     </tr>
 
-                    <!--TODO @DamianAgregar vinculación con los datos-->
                     <tr>
                         <td><input type="number" min="0" name="edad" [(ngModel)]="evolucionAmbulatoria.edad"></td>
                         <td><input type="number" min="0" name="meses" [(ngModel)]="evolucionAmbulatoria.meses"> </td>
                         <td><input #peso type="number" min="0" name="peso" [(ngModel)]="evolucionAmbulatoria.peso" size="3">                            </td>
                         <td><input #talla type="number" min="0" name="talla" [(ngModel)]="evolucionAmbulatoria.talla" size="3"></td>
                         <td><input type="number" min="0" name="pc" [(ngModel)]="evolucionAmbulatoria.pc" size="3"></td>
-                        <td> <button (click)="actualizarIMC(peso.value, talla.value)" type="button" class="btn btn-sm btn-default">Calcular</button>
+                        <td> <button (click)="actualizarIMC(peso.value, talla.value)" type="button" class="btn btn-sm btn-primary">Calcular</button>
                             <span>{{evolucionAmbulatoria.imc | number:'2.1-2'}}</span></td>
                         <td>NA</td>
                         <td>NA</td>
@@ -70,7 +69,6 @@
 
                 </table>
             </div>
-
             <div class="row">
                 <div class="col-md-3">
                     <strong><label>ENFERMEDADES CRONICAS:</label></strong>
@@ -90,22 +88,21 @@
                     <strong>  Ulterior  <input type="radio" name="primeraVez" ></strong>
                 </div>
             </div>
-
             <div class="row">
                 <hr>
                 <strong><label> Enfermedad Actual:</label></strong>
-                <input class="campoLargo" type="text" name="enfermedadActual" >
+                <input class="campoLargo" type="text" name="enfermedadActual" [(ngModel)]="evolucionAmbulatoria.enfermedad_actual">
             </div>
 
             <div class="row">
                 <hr>
                 <strong><label> Examen f&iacute;sico:</label></strong>
-                <input class="campoLargo" type="text" name="examenFisico" >
+                <input class="campoLargo" type="text" name="examenFisico" [(ngModel)]="evolucionAmbulatoria.examen_fisico">
             </div>
             <div class="row">
                 <hr>
                 <strong><label> Diagn&oacute;stico o Problema de salud:</label></strong>
-                <input class="campoLargo" type="text" name="examenFisico" >
+                <input class="campoLargo" type="text" name="diagn_problema_salud" [(ngModel)]="evolucionAmbulatoria.diagn_problema_salud">
             </div>
             <div class="row">
                 <hr>
@@ -114,14 +111,14 @@
                         <strong><label> Plan de tratamiento:</label></strong>
                     </div>
 
-                    <textarea rows="5" cols="50" ></textarea>
+                    <textarea rows="5" cols="50" name="plan_tratamiento" [(ngModel)]="evolucionAmbulatoria.plan_tratamiento"></textarea>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
                         <strong><label> Consejer&iacute;as:</label></strong>
                     </div>
 
-                    <textarea rows="5" cols="50" ></textarea>
+                    <textarea rows="5" cols="50" name="consejerias" [(ngModel)]="evolucionAmbulatoria.consejerias"></textarea>
                 </div>
 
             </div>
@@ -129,16 +126,16 @@
             <div class="row">
                 <hr>
                 <strong><label> Indicaci&oacute;n de Lab o Estudios complementarios:</label></strong>
-                <input class="campoLargo" type="text" name="indicacionLab">
+                <input class="campoLargo" type="text" name="indicacionLab" [(ngModel)]="evolucionAmbulatoria.indicacionLab">
             </div>
             <div class="row">
                 <strong><label> Indicaci&oacute;n de medicaci&oacute;n</label></strong>
-                <input class="campoLargo" type="text" name="indicacion_medicacion" >
+                <input class="campoLargo" type="text" name="indicacion_medicacion"[(ngModel)]="evolucionAmbulatoria.indicacion_medicacion" >
             </div>
             <div class="row">
                 <strong><label> Solicitud de derivaci&oacute;n</label></strong> Interconsulta
-                <input type="radio" name="derivacion" value="interconsulta" >                Internaci&oacute;n
-                <input type="radio" name="derivacion" value="internacion" >
+                <input type="radio" name="derivacion" value="interconsulta" [(ngModel)]="evolucionAmbulatoria.solicitud_de_derivacion">Internaci&oacute;n
+                <input type="radio" name="derivacion" value="internacion" [(ngModel)]="evolucionAmbulatoria.solicitud_de_derivacion">
             </div>
 
             <div class="row" align="right">
@@ -154,7 +151,7 @@
                 <strong><label>Sello / Aclaraci&oacute;n</label></strong>
             </div>
             <div class="row" align="center">
-                <button type="button" class="btn btn-primary" id="botonGuardar" (click)="guardar(f)">>Confirmar</button>
+                <button type="button" class="btn btn-primary" id="botonGuardar" (click)="guardar(f)">Confirmar</button>
                 <button type="button" class="btn btn-primary" routerLink="/buscar/{{dniPaciente}}" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Cancelar</button>
             </div>
         </form>
