--- a/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
+++ b/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
@@ -90,6 +90,11 @@
             </div>
             <div class="row">
                 <hr>
+                <strong><label> Motivo de la consulta:</label></strong>
+                <input class="campoLargo" type="text" name="motivoConsulta" [(ngModel)]="evolucionAmbulatoria.motivo_de_consulta">
+            </div>
+            <div class="row">
+                <hr>
                 <strong><label> Enfermedad Actual:</label></strong>
                 <input class="campoLargo" type="text" name="enfermedadActual" [(ngModel)]="evolucionAmbulatoria.enfermedad_actual">
             </div>
@@ -126,7 +131,7 @@
             <div class="row">
                 <hr>
                 <strong><label> Indicaci&oacute;n de Lab o Estudios complementarios:</label></strong>
-                <input class="campoLargo" type="text" name="indicacionLab" [(ngModel)]="evolucionAmbulatoria.indicacionLab">
+                <input class="campoLargo" type="text" name="indicacionLab" [(ngModel)]="evolucionAmbulatoria.indicacion_lab">
             </div>
             <div class="row">
                 <strong><label> Indicaci&oacute;n de medicaci&oacute;n</label></strong>
