--- a/src/app/antecedentes-perinatologicos/antecedentes-perinatologicos.component.html
+++ b/src/app/antecedentes-perinatologicos/antecedentes-perinatologicos.component.html
@@ -9,61 +9,60 @@
         <div class="row">
             <div class="col-md-3">
                 <strong><label>Controles adecuados en el embarazo</label></strong>
-                <br> Si <input type="radio" name="controlesAdecuados" value="si"> No <input type="radio" name="controlesAdecuados"
-                    value="no">
+                <br> Si <input type="radio" name="controlesAdecuados" [(ngModel)]="antecedentePerinatologico.controles_adecuados_embarazo"
+                    value="true"> No <input type="radio" name="controlesAdecuados" value="false" [(ngModel)]="antecedentePerinatologico.controles_adecuados_embarazo">
             </div>
             <div class="col-md-3">
                 <strong><label>Nacimiento m&uacute;ltiple</label></strong>
-                <br> Si <input type="radio" name="nacimientoMultiple" value="si"> No <input type="radio" name="nacimientoMultiple"
-                    value="no">
+                <br> Si <input type="radio" name="nacimientoMultiple" value="1" [(ngModel)]="antecedentePerinatologico.nacimiento_multiple">                No <input type="radio" name="nacimientoMultiple" value="0" [(ngModel)]="antecedentePerinatologico.nacimiento_multiple">
             </div>
             <div class="col-md-3">
+
                 <strong><label>Presentaci&oacute;n</label></strong>
-                <br> Cef&aacute;lica <input type="radio" name="presentacion" value="cefalica"> Pod&aacute;lica <input type="radio"
-                    name="presentacion" value="podalica"> Transversa <input type="radio" name="presentacion" value="transversa">
+                <br> Cef&aacute;lica <input type="radio" name="presentacion" value="3" [(ngModel)]="antecedentePerinatologico.tipo_presentacion">                Pod&aacute;lica <input type="radio" name="presentacion" value="2" [(ngModel)]="antecedentePerinatologico.tipo_presentacion">                Transversa <input type="radio" name="presentacion" value="1" [(ngModel)]="antecedentePerinatologico.tipo_presentacion">
             </div>
             <div class="col-md-3">
                 <strong><label>Terminaci&oacute;n</label></strong>
-                <br> Espont&aacute;nea <input type="radio" name="terminacion" value="espontanea"> Forceps <input type="radio"
-                    name="terminacion" value="forceps"> C&eacute;sarea <input type="radio" name="terminacion" value="cesarea">
+                <br> Espont&aacute;nea <input type="radio" name="terminacion" value="3" [(ngModel)]="antecedentePerinatologico.tipo_terminacion">                Forceps <input type="radio" name="terminacion" value="2" [(ngModel)]="antecedentePerinatologico.tipo_terminacion">                C&eacute;sarea <input type="radio" name="terminacion" value="1" [(ngModel)]="antecedentePerinatologico.tipo_terminacion">
             </div>
         </div>
+        <!--
         <div class="row">
             <hr>
             <strong><label>Lugar de parto:</label></strong>
-            <input class="campoLargo" type="text" name="lugar_parto" placeholder="Ingrese el lugar del parto">
+            <input class="campoLargo" type="text" name="lugar_parto" placeholder="Ingrese el lugar del parto" [(ngModel)]="antecedentePerinatologico.lugar_de_parto">
         </div>
         <div class="row">
             <hr>
             <strong><label>Motivo:</label></strong>
-            <input class="campoLargo" type="text" name="motivo" placeholder="Ingrese el motivo" minlength="1">
+            <input class="campoLargo" type="text" name="motivo" placeholder="Ingrese el motivo" minlength="1" [(ngModel)]="antecedenteperinatologico.motivo_terminacion">
         </div>
         <div class="row">
             <hr>
             <div class="col-md-2">
                 <strong><label>PESO:</label></strong>
-                <input class="campoChico" type="number" name="peso" min="0" max="500" placeholder="kg">
+                <input class="campoChico" type="number" name="peso" min="0" max="10" placeholder="kg" [(ngModel)]="antecedentePerinatologico.peso">
             </div>
 
             <div class="col-md-2">
                 <strong><label>Talla:</label></strong>
-                <input class="campoChico" type="number" name="talla" min="0" max="500" placeholder="cm">
+                <input class="campoChico" type="number" name="talla" min="0" max="100" placeholder="cm" [(ngModel)]="antecedentePerinatologico.talla">
             </div>
 
             <div class="col-md-2">
                 <strong><label>PC:</label></strong>
-                <input class="campoChico" type="number" name="PC" min="0" max="100" placeholder="cm">
+                <input class="campoChico" type="number" name="PC" min="0" max="100" placeholder="cm" [(ngModel)]="antecedentePerinatologico.perimetro_cefalico">
             </div>
 
             <div class="col-md-2">
                 <strong><label>EG:</label></strong>
-                <input class="campoChico" type="number" name="EG" min="0" max="50" placeholder="Semanas">
+                <input class="campoChico" type="number" name="EG" min="0" max="50" placeholder="Semanas" [(ngModel)]="antecedentePerinatologico.edad_gestacional">
             </div>
 
             <div class="col-md-2">
                 <strong><label>APGAR:</label></strong>
-                <input class="campoChico" type="number" name="apgar1"> <label>1'</label>
-                <input class="campoChico" type="number" name="apgar2"> <label>5'</label>
+                <input class="campoChico" type="number" name="apgar1" min="1" max="10" [(ngModel)]="antecedentePerinatologico.test_apgar">                <label>1'</label>
+                <input class="campoChico" type="number" name="apgar2" min="1" max="10" [(ngModel)]="antecedentePerinatologico.test_apgar2">                <label>5'</label>
             </div>
 
             <div class="col-md-2">
@@ -71,11 +70,11 @@
                     <th><strong><label>OEA:</label></strong></th>
                     <th><strong><label>Resultado:</label></strong></th>
                     <tr>
-                        <td>Si <input type="radio" name="OEA" value="si">
-                            <br> No <input type="radio" name="OEA" value="no"></td>
+                        <td>N <input type="radio" name="OEA" value="1" [(ngModel)]="antecedentePerinatologico.otoemisiones_acusticas">
+                            <br> A <input type="radio" name="OEA" value="0" [(ngModel)]="antecedentePerinatologico.otoemisiones_acusticas"></td>
 
-                        <td>N <input type="radio" name="resultadoOEA" value="N">
-                            <br> A <input type="radio" name="resultadoOEA" value="A"></td>
+                        <td>N <input type="radio" name="resultadoOEA" value="1" [(ngModel)]="antecedentePerinatologico.otoemisiones_acusticas_resultado">
+                            <br> A <input type="radio" name="resultadoOEA" value="0" [(ngModel)]="antecedentePerinatologico.otoemisiones_acusticas_resultado"></td>
 
                     </tr>
 
@@ -92,38 +91,47 @@
             <div class="col-md-4">
                 <strong><label>Grupo y factor:</label></strong>
                 <select>
-                    <option value="AB+">AB Positivo</option>
-                    <option value="B+">B Positivo</option>
-                    <option value="A+">A Positivo</option>
-                    <option value="0+">Cero Positivo</option>
-                    <option value="AB-">AB Negativo</option>
-                    <option value="B-">B Negativo</option>
-                    <option value="A-">A Negativo</option>
-                    <option value="0-">Cero Negativo</option>
+                    <option value="AB+" [(ngModel)]="antecedentePerinatologico.grupo_y_factor">AB Positivo</option>
+                    <option value="B+" [(ngModel)]="antecedentePerinatologico.grupo_y_factor">B Positivo</option>
+                    <option value="A+" [(ngModel)]="antecedentePerinatologico.grupo_y_factor">A Positivo</option>
+                    <option value="0+"[(ngModel)]="antecedentePerinatologico.grupo_y_factor">Cero Positivo</option>
+                    <option value="AB-"[(ngModel)]="antecedentePerinatologico.grupo_y_factor">AB Negativo</option>
+                    <option value="B-"[(ngModel)]="antecedentePerinatologico.grupo_y_factor">B Negativo</option>
+                    <option value="A-"[(ngModel)]="antecedentePerinatologico.grupo_y_factor">A Negativo</option>
+                    <option value="0-"[(ngModel)]="antecedentePerinatologico.grupo_y_factor">Cero Negativo</option>
                   </select>
 
             </div>
             <div class="col-md-4">
 
-                <strong><label>Internaci&oacute;n:</label></strong> Si <input type="radio" name="internacion" value="si">                No <input type="radio" name="internacion" value="no">
+                <strong><label>Internaci&oacute;n:</label></strong> Si <input type="radio" name="internacion" value="1" [(ngModel)]="antecedentePerinatologico.internacion">                No <input type="radio" name="internacion" value="0" [(ngModel)]="antecedentePerinatologico.internacion">
             </div>
             <div class="col-md-4">
                 <table class="table table-striped table-bordered table-hover" id="tablaPerinatologicos">
                     <th><strong><label>Pesquisa Enf. Cong&eacute;nitas Metab&oacute;licas:</label></strong></th>
                     <th><strong><label>Resultado pesquisa:</label></strong></th>
                     <tr>
-                        <td>Si <input type="radio" name="pesquisa" value="si"> No <input type="radio" name="pesquisa" value="no"></td>
-                        <td>Si <input type="radio" name="resultadoPesquisa" value="si"> No <input type="radio" name="resultadoPesquisa"
-                                value="no"></td>
+                        <td>Si <input type="radio" name="pesquisa" value="1" [(ngModel)]="antecedentePerinatologico.pesquisa_enf_congenitas_metabolicas"> No <input type="radio" name="pesquisa" value="0" [(ngModel)]="antecedentePerinatologico.pesquisa_enf_congenitas_metabolicas"></td>
+                        <td>Si <input type="radio" name="resultadoPesquisa" value="1" [(ngModel)]="antecedentePerinatologico.pesquisa_enf_congenitas_metabolicas_resultado" > No <input type="radio" name="resultadoPesquisa"
+                                value="0" [(ngModel)]="antecedentePerinatologico.pesquisa_enf_congenitas_metabolicas_resultado"></td>
                     </tr>
                 </table>
             </div>
         </div>
         <hr>
-        <div class="row" align="center">
-            <button type="button" class="btn btn-primary">Confirmar</button>
+        Activando renglones con bindeo
+    -->
+        <div *ngIf="!tieneAntecedentePerinatologico" align="center">
+            <button id="botonGuardar" (click)="guardar(f)">Confirmar</button>
             <a routerLink="/buscar/{{dniPaciente}}" routerLinkActive="active"><button type="button" class="btn btn-primary">Cancelar</button></a>
         </div>
+
+        <div *ngIf="tieneAntecedentePerinatologico" align="center">
+            <a routerLink="/buscar/{{dniPaciente}}" routerLinkActive="active"><button type="button" class="btn btn-primary">Volver</button></a>
+        </div>
+
+
+
 
     </div>
 </div>
