--- a/src/app/antecedentes_familiares/antecedentes-familiares.component.html
+++ b/src/app/antecedentes_familiares/antecedentes-familiares.component.html
@@ -4,13 +4,13 @@
   </div>
   <div class="panel-body">
     <div class="row" align="center">
-      <form>
+      <form  #f="ngForm" (ngSubmit)="guardar()">
         <div>
           <div *ngFor="let afeccion of poseeTiposAfeccionesFamiliares">
             <div class="row text-left" style="padding-left: 20px">
               <div class="checkbox">
                 <label>
-            <input type="checkbox" value="{{afeccion.nombre}}" checked>
+            <input type="checkbox" name="activado" [(ngModel)]="afeccion.activado"> <!--value="{{afeccion.nombre}}" -->
             {{afeccion.descripcion}}
           </label>
               </div>
@@ -20,14 +20,14 @@
             <div class="row text-left" style="padding-left: 20px">
               <div class="checkbox">
                 <label>
-            <input type="checkbox" value="{{afeccion.nombre}}">
+            <input type="checkbox" name="activado1" [(ngModel)]="afeccion.activado">
             {{afeccion.descripcion}}
           </label>
               </div>
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Modificar antecedentes familiares</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!f.form.valid" id="botonGuardar">Modificar antecedentes familiares</button>
       </form>
     </div>
   </div>
