--- a/src/app/antecedentes/antecedentes.component.html
+++ b/src/app/antecedentes/antecedentes.component.html
@@ -40,7 +40,7 @@
     <app-habitos></app-habitos>
   </div>
   <div class="row" align="center">
-    <button type="button" class="btn btn-primary">Confirmar</button>
-    <a routerLink="/buscar/{{dniPaciente}}" routerLinkActive="active"><button type="button" class="btn btn-danger">Cancelar</button></a>
+    
+    <a routerLink="/buscar/{{dniPaciente}}" routerLinkActive="active"><button type="button" class="btn btn-primary">Volver</button></a>
   </div>
 </div>
