--- a/src/app/siniestros-accidentes/siniestros-accidentes.component.html
+++ b/src/app/siniestros-accidentes/siniestros-accidentes.component.html
@@ -5,9 +5,14 @@
       </h3>
     </div>
     <div class="panel-body">
-      <div class="alert alert-warning">
+      <div class="alert alert-warning" align="center">
         <strong>No existen accidentes cargados!</strong> Ir a agregar accidentes
+        <hr>
+        <div class="row">
+          <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('myModal').open()">Agregar</button>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
@@ -38,8 +43,45 @@
             </tr>
           </tbody>
         </table>
-        <button type="submit" class="btn btn-primary">Agregar nuevo registro</button>
+        <hr>
+        <div class="row">
+          <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('myModal').open()">Agregar</button>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+<ngx-smart-modal #myModal [identifier]="'myModal'" (onOpen)="log('Modal opened!')" (onClose)="log('Modal closed!')" (onDismiss)="log('Modal dismissed!')">
+
+  <h5>Accidentes - Internaciones - Operaciones</h5>
+  <form #Form="ngForm">
+    <div class="form-group">
+      <div class="row">
+        <div class="col-md-2">
+          <strong><label for="Fecha">Fecha:</label></strong>
+        </div>
+        <div class="col-md-10">
+          <input class="campoMediano" name="hoy" type="date" [ngModel]="hoy | date:'y-MM-d'" (ngModelChange)="updatehoy($event)" required>
+          
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <strong><label>Motivo:</label></strong>
+      <input class="campoLargo" type="text" name="motivo" [(ngModel)]="motivo" placeholder="Agregue una motivo de la internación, operación, o accidente"
+        required>
+    </div>
+    <div class="form-group">
+      <strong><label>Seleccione el tipo de siniestro:</label></strong>
+      <select name="tipoSiniestro" [(ngModel)]="codigoTipoSiniestroSeleccionado" required>
+      <option value="" selected>Seleccione una opción</option>
+      <option  *ngFor="let siniestro of todosLosSiniestros" value={{siniestro.codigo}}>{{siniestro.descripcion}}</option>
+     </select>
+    </div>
+
+    <button [disabled]="!Form.form.valid" (click)="guardar()">Guardar</button>
+    <button (click)="myModal.close()">Cerrar</button>
+
+  </form>
+</ngx-smart-modal>
