--- a/src/app/habitos/habitos.component.html
+++ b/src/app/habitos/habitos.component.html
@@ -8,6 +8,10 @@
       <div align="center" class="alert alert-warning">
         <strong>No hay habitos cargados</strong>
         <a>¿Agregar nuevo habito?</a>
+
+      </div>
+      <div class="row" align="center">
+        <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('habitoModal').open()">Agregar nueva habito</button>
       </div>
     </div>
   </div>
@@ -41,8 +45,7 @@
               </tr>
             </tbody>
           </table>
-          <button (click)="ngxSmartModalService.getModal('nuevoHabito').open()">Open myModal</button>
-          <button type="submit" class="btn btn-primary">Agregar nuevo habito</button>
+          <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('habitoModal').open()">Agregar nuevo habito</button>
         </div>
       </div>
     </div>
@@ -50,14 +53,28 @@
 </div>
 
 
-<ngx-smart-modal #nuevoHabito [identifier]="'nuevoHabito'">
-  <form #fhabito="ngForm">
-    <h5>Nuevo h&aacute;bito</h5>
-    <!--<input name="busquedaPersona" type="text" ngModel required #busqueda="ngModel"> -->
-    <input name="observacion" type="text" ngModel>
-    <input name="cantidad" type="number" min="0" ngModel>
-    <p> Lisa de tipos de habitos </p>
-    <button (click)="agregarHabito(fhabito); nuevoHabito.close()">Agregar</button>
-    <button (click)="nuevoHabito.close()">Salir</button>
+<ngx-smart-modal #habitoModal [identifier]="'habitoModal'" (onOpen)="log('Modal opened!')" (onClose)="log('Modal closed!')"
+  (onDismiss)="log('Modal dismissed!')">
+
+  <h5>Habitos que posee el paciente</h5>
+  <form #FormHabito="ngForm">
+    <div class="form-group">
+      <label>Seleccione un habito</label>
+      <select name="seleccionado" [(ngModel)]="codigoHabitoSeleccionado" required>
+    <option value="" selected>Seleccione un habito</option>
+  <option value={{h.codigo}} *ngFor="let h of tipoHabitosDisponibles">{{h.nombre_corto}}
+  </option>
+  </select>
+    </div>
+
+    <div class="form-group">
+      <label>Descripción del habito:</label>
+      <br>
+      <textarea rows="5" cols="50" name="descripcion" [(ngModel)]="descripcion" required></textarea>
+    </div>
+
+    <button [disabled]="!FormHabito.form.valid" (click)="guardar()">Guardar</button>
+    <button (click)="habitoModal.close()">Cerrar</button>
+
   </form>
 </ngx-smart-modal>
