--- a/src/app/medicamentos-consume/medicamentos-consume.component.html
+++ b/src/app/medicamentos-consume/medicamentos-consume.component.html
@@ -4,38 +4,96 @@
       <h3 class="panel-title">Consumo de medicamentos</h3>
     </div>
     <div class="panel-body">
-    <div align="center" class="alert alert-warning">
-      <strong>No hay medicamentos que consuma actualmente</strong>
-      <a>¿Agregar nuevo medicamento?</a>
-    </div>
+      <div align="center" class="alert alert-warning">
+        <strong>No hay medicamentos que consuma actualmente</strong>
+
+      </div>
+      <div class="row" align="center">
+        <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('medicamentoModal').open()">Agregar nuevo medicamento</button>
+      </div>
     </div>
   </div>
 </div>
 
-  <div align="center" *ngIf="getCantidadMedicamentosConsume() > 0">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title">Registro de medicamentos que consume el paciente</h3>
-      </div>
-      <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Dosificaci&oacute;n</th>
-                <th>Principio activo del medicamento </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let medicamento of medicamentosConsume">
-                <td>{{medicamento.dosificacion}} </td>
-                <td>{{medicamento.medicamentos_principio_activo}} </td>
-              </tr>
-            </tbody>
-          </table>
-          <button type="submit" class="btn btn-primary">Agregar nuevo medicamento</button>
-        </div>
+<div align="center" *ngIf="getCantidadMedicamentosConsume() > 0">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Registro de medicamentos que consume el paciente</h3>
+    </div>
+    <div class="panel-body">
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Dosificaci&oacute;n</th>
+              <th>Principio activo del medicamento </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let medicamento of medicamentosConsume">
+              <td>{{medicamento.dosificacion}} </td>
+              <td>{{medicamento.medicamentos_principio_activo}} </td>
+            </tr>
+          </tbody>
+        </table>
+        <button class="btn btn-primary" (click)="ngxSmartModalService.getModal('medicamentoModal').open()">Agregar nuevo medicamento</button>
       </div>
     </div>
   </div>
-  <!--Fin del NGIF-->
+</div>
+<!--Fin del NGIF-->
+
+
+
+<ngx-smart-modal #medicamentoModal [identifier]="'medicamentoModal'" (onOpen)="log('Modal opened!')" (onClose)="log('Modal closed!')"
+  (onDismiss)="log('Modal dismissed!')">
+
+  <h5>Medicamentos que consume</h5>
+  <form #FormMedicamento="ngForm">
+    <div class="form-group">
+      <label>Ingrese una descripcion sobre el medicamento que consume</label>
+      <br>
+      <!-- <input name="descripcion" type="text" [(ngModel)]="descripcion" required> -->
+      <textarea rows="5" cols="50" name="descripcion" [(ngModel)]="descripcion" required></textarea>
+
+    </div>
+    <hr>
+    <div class="form-group">
+      <label>Realice una busqueda de los medicamentos</label>
+      <input #txtFname type="search" name="busqueda" [(ngModel)]="busqueda">
+
+    </div>
+    <hr>
+    <!-- <div *ngIf="getResultadosMedicamentos() > 0"> -->
+
+      <label>Seleccione un medicamento que consume:</label>
+      <br>
+      
+        <select name="seleccionado" [(ngModel)]="seleccionado" required>
+          
+    <option value="" selected >Seleccione un medicamento</option>
+    <option value={{m.codigo}} *ngFor="let m of medicamentos | searchfilter: 'nombre' : txtFname.value" >
+      {{m.nombre}} - {{m.presentacion}}
+    </option>
+        </select>
+      
+      <input #txtFname2 placeholder="Buscar" />
+      <tr *ngFor="let m of medicamentos | searchfilter: 'nombre' : txtFname2.value">
+        <td>
+          {{m.nombre}}
+        </td>
+        <td>
+          {{m.presentacion}}
+        </td>
+      </tr>
+
+
+      <!--</div> -->
+    <div class="row" align="center">
+      <button [disabled]="!FormMedicamento.form.valid" (click)="guardar()">Guardar</button>
+
+      <button (click)="medicamentoModal.close()">Cerrar</button>
+    </div>
+
+  </form>
+</ngx-smart-modal>
