--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -10,7 +10,7 @@
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="antecedentes" routerLinkActive="active">Antecedente</a></li>-->
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="antecedentes_perinatologicos" routerLinkActive="active">Antecedentes perinatologicos</a></li>-->
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="#" routerLinkActive="active">Listado de problemas de salud</a></li>-->
-      <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/salir" routerLinkActive="active">Ir a riesgo cardiovascular</a></li>
+      <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/salir" routerLinkActive="active">Ir a riesgo cardiovascular</a></li> -->
     </ul>
   </div>
   <!-- id header -->
