--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -7,13 +7,13 @@
       <div class="row" align="center">
         <div *ngIf="getCantidadAtenciones()>0">
           <table class="table table-striped table-bordered table-hover" id="tablaAtencion">
-            <!--<th>Codigo</th>-->
-            <th>Fecha Atenci&oacute;n</th>
+            <th>Codigo</th>
+            <th>Fecha Atenci&oacute;n <input #ordenamiento type="checkbox" [(ngModel)]="ordenarASC" (change)="ordenar()">{{orden}}</th>
             <th>Observaci&oacute;n</th>
             <th>Acciones</th>
             <tr *ngFor="let atencion of atenciones">
-              <!--<td>{{atencion.codigo}}</td> -->
-              <td>{{atencion.fecha_atencion | date}}</td>
+              <td>{{atencion.codigo}}</td> 
+              <td>{{atencion.fecha_atencion | date:'d MMM y jms'}}</td>
               <td>{{atencion.observacion}}</td>
               <td>
                 <button type="button" class="btn btn-primary">Modificar</button>
