--- a/src/app/habitos/habitos.component.html
+++ b/src/app/habitos/habitos.component.html
@@ -70,7 +70,11 @@
     <div class="form-group">
       <label>Descripción del habito:</label>
       <br>
-      <textarea rows="5" cols="50" name="descripcion" [(ngModel)]="descripcion" required></textarea>
+      <textarea rows="5" cols="50" name="observacion" [(ngModel)]="observacion" required></textarea>
+    </div>
+    <div class="form-group">
+      <label>Cantidad </label>
+      <input type="number" min="0" name="cantidad" [(ngModel)]="cantidad" required>
     </div>
 
     <button [disabled]="!FormHabito.form.valid" (click)="guardar()">Guardar</button>
